# ADB-Express

./: CMakeLists.txt  LICENSE.md  README.md  app.cpp  connect.cpp  disconnect.cpp  main.cpp  reset.adbe  reset.bat
.github/workflows/: c-cpp.yml
core/: getinput.cpp  getinput.h
host/: connect.cpp  connect.h  disconnect.cpp  disconnect.h  hosthandler.cpp  hosthandler.h  pair.cpp  pair.h  reconnect.cpp  reconnect.h  tcpip.cpp  tcpip.h
movement/: handlermov.cpp  handlermov.h  manuel.cpp  manuel.h  swipe.cpp  swipe.h  text.cpp  text.h
script/: handler.cpp  handler.h  script.cpp  script.h
